--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
-.terraform\*
+.terraform/*
 .\terraform\providers\terraform-provider-aws_v2.70.0_x5.exe
+.terraform.lock.hcl
+terraform.tfstate.backup
+
